--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas Utils</title>
+    <link rel="shortcut icon" href="src/static/favicon.png">
     <link rel="stylesheet" href="./src/style/index.css">
-    <link rel="shortcut icon" href="./src/static/favicon.png">
 </head>
 
 <body>
